# Auramaur

./: .env.example  .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: claude-blocking-review.yml
auramaur/: bot.py  cli.py
auramaur/broker/: allocator.py  sync.py
auramaur/monitoring/: readiness.py
auramaur/risk/: checks.py  manager.py
config/: defaults.yaml  settings.py
docs/findings/: 2026-04-28-duplicate-fee-tables.md  2026-04-28-env-example-gaps.md  2026-04-28-test-baseline.md  2026-04-29-kalshi-paper-mode-starvation.md
docs/plans/: 2026-04-28-deployment-plan.md  2026-04-28-polymarket-key-requests.md  upstream-contributions.md
observability/: dashboard.py  launch.sh  metadata.yml
scripts/: bootstrap-keychain.sh
scripts/launchagent/: com.auramaur.kalshi.plist  com.auramaur.observability.plist  com.auramaur.polymarket.plist
scripts/launchd/: install-launchd.sh  wrapper-bot.sh  wrapper-observability.sh
tests/: test_kalshi.py  test_readiness.py  test_resolution_tracker.py  test_risk_checks.py  test_settings.py
